# euglenatracer

./: CMakeLists.txt  Makefile  README.md  buildall.sh  buildall_without_matlab.sh  clean.sh  euglena.cpp  intersection.cpp  intersection.h  tracker.cpp  tracker.h
dataprocessing/: dataprocess.ipynb
ffmpeg-2.8.4/doc/examples/pc-uninstalled/: libavresample.pc
getpot/: GetPot
getpot/examples/TEST/: test-absorb.sh  test-direct-follow.sh  test-expand.sh  test-ez-ufo.sh  test-field-separator.sh  test-filter.sh  test-flags.sh  test-follow.sh  test-get.sh  test-input-file.sh  test-next.sh  test-nominus.sh  test-nominus_followers.sh  test-options.sh  test-tails.sh  test-ufo.sh  test-variables.sh
matlab/: EuglenaData.m  EuglenaTracks.m  JSON.m  demo01_basic_load.m  demo02_trackid.m  demo03_multitrack.m  euglena.cpp  euglenademo.m  fromjson.mexa64  fromjson.mexmaci64  fromjson.mexw64  make.m  numvidframes.cpp  package.m  problem_1d.m  problem_1e.m  readvid.cpp  setjsonfield.mexa64  setjsonfield.mexmaci64  setjsonfield.mexw64  testeuglena.m  textprogressbar.m  tojson.mexa64  tojson.mexmaci64  tojson.mexw64
matlab/data1/: lightdata.json
matlab/data2/: lightdata.json
matlab/data3/: lightdata.json
matlab/json-c/: json-c.sln  json-c.vcxproj  json-c.vcxproj.filters  json_object.h
matlab/matlab_json/: make.m
opencv/: CMakeLists.txt
opencv/modules/videoio/src/: cap_ffmpeg.cpp  cap_ffmpeg_impl.hpp
python/: EuglenaData.py  testeuglena.py
